--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="container">
 <br>http://192.168.1.12/<br>
 <a href="\photos\photos.html">写真</a><br><br>
-<a href="\math\math.html">math</a><br><br>
+<a href="math\math.html">math</a><br><br>
 <a href="\study\study.html">資格勉強用</a><br><br>
 <a href="\wedding\wedding.html">結婚式準備</a><br><br>
 <a href="\manual\manual.html">各種マニュアル</a><br><br>
