--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </script>
 
 </head>
-<body background="\photos\nemophila.jpg">
+<body background="photos\nemophila.jpg">
 <div class="container">
 <br>http://192.168.1.12/<br>
 <a href="photos\photos.html">写真</a><br><br>
